--- a/.github/workflows/phpstan.yml
+++ b/.github/workflows/phpstan.yml
@@ -29,4 +29,4 @@ jobs:
         run: composer install --no-interaction --no-scripts --no-progress --prefer-dist
 
       - name: Execute PHPStan
-        run: src/vendor/bin/phpstan analyse -v
+        run: src/vendor/bin/phpstan analyse
