--- a/src/.env.example
+++ b/src/.env.example
@@ -15,6 +15,7 @@ DB_DATABASE=app
 DB_USERNAME=login
 DB_PASSWORD=pass
 
+MS_DRIVER=array
 MS_DB_CONNECTION=sqlsrv
 MS_DB_HOST=localhost
 MS_DB_PORT=1433
