--- a/src/composer.json
+++ b/src/composer.json
@@ -17,6 +17,7 @@
     "require": {
         "php": "^8.1",
         "appstract/laravel-opcache": "^4.0",
+        "calebporzio/sushi": "^2.5",
         "ddeboer/imap": "^1.18",
         "default-089/sxgeo": "0.16.*@dev",
         "defstudio/telegraph": "^1.37",
