392. update to laravel 11

--- a/src/composer.json
+++ b/src/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "laravel/laravel",
+    "version": "1.0.0",
     "type": "project",
     "description": "The Laravel Framework.",
     "keywords": [
@@ -15,59 +16,62 @@
         {
             "type": "vcs",
             "url": "https://github.com/dmitrakovich/Laravel-Model-Doc.git"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/dmitrakovich/laravel-admin.git"
         }
     ],
     "require": {
         "php": "^8.3",
         "appstract/laravel-opcache": "^4.0",
         "calebporzio/sushi": "^2.5",
-        "ddeboer/imap": "^1.18",
+        "ddeboer/imap": "^1.19",
         "default-089/sxgeo": "0.16.*@dev",
-        "defstudio/telegraph": "^1.37",
-        "deployer/deployer": "7.3.0",
-        "diglactic/laravel-breadcrumbs": "^8.1",
-        "dmitrakovich/smstraffic-for-laravel": "^0.1.5",
+        "defstudio/telegraph": "^1.42",
+        "deployer/deployer": "^7.3",
+        "diglactic/laravel-breadcrumbs": "^9.0",
+        "dmitrakovich/smstraffic-for-laravel": "^0.2.0",
         "drandin/declension-nouns": "dev-master",
-        "encore/laravel-admin": "^1.8",
-        "facebook/php-business-sdk": "^18.0",
-        "giggsey/libphonenumber-for-php": "8.12.47.1",
-        "guzzlehttp/guzzle": "^7.5",
+        "encore/laravel-admin": "^1.9",
+        "facebook/php-business-sdk": "^19.0",
+        "giggsey/libphonenumber-for-php": "^8.13",
+        "guzzlehttp/guzzle": "^7.8",
         "jenssegers/agent": "^2.6",
         "jxlwqq/env-manager": "^0.1.0",
-        "kalnoy/nestedset": "^6.0",
+        "kalnoy/nestedset": "v6.x-dev",
         "laravel-admin-ext/ckeditor": "^1.0",
         "laravel-admin-ext/grid-sortable": "^1.1",
-        "laravel-admin-ext/helpers": "^2.0",
         "laravel-admin-ext/log-viewer": "^1.0",
-        "laravel/framework": "^10.15",
-        "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.8",
-        "laravie/serialize-queries": "^2.0",
-        "league/flysystem-aws-s3-v3": "^3.0",
+        "laravel/framework": "^11.0",
+        "laravel/sanctum": "^4.0",
+        "laravel/tinker": "^2.9",
+        "laravie/serialize-queries": "^3.0",
+        "league/flysystem-aws-s3-v3": "^3.26",
         "maatwebsite/excel": "^3.1",
-        "php-ffmpeg/php-ffmpeg": "^1.1",
-        "picqer/php-barcode-generator": "^2.3",
-        "sentry/sentry-laravel": "^3.2",
-        "spatie/laravel-backup": "^8.1",
-        "spatie/laravel-googletagmanager": "^2.6",
-        "spatie/laravel-medialibrary": "^10.9",
-        "staudenmeir/eloquent-json-relations": "^1.6",
-        "staudenmeir/laravel-cte": "^1.9",
+        "php-ffmpeg/php-ffmpeg": "^1.2",
+        "picqer/php-barcode-generator": "^2.4",
+        "sentry/sentry-laravel": "^4.4",
+        "spatie/laravel-backup": "^8.6",
+        "spatie/laravel-googletagmanager": "^2.7",
+        "spatie/laravel-medialibrary": "^11.4",
+        "staudenmeir/eloquent-json-relations": "^1.12",
+        "staudenmeir/laravel-cte": "^1.11",
         "yoomoney/yookassa-sdk-php": "^2.2"
     },
     "require-dev": {
-        "barryvdh/laravel-debugbar": "^3.6",
-        "fakerphp/faker": "^1.9.1",
-        "larastan/larastan": "^2.0",
-        "laravel/breeze": "^1.9",
-        "laravel/pint": "^1.2",
-        "laravel/sail": "^1.29",
-        "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^7.0",
+        "barryvdh/laravel-debugbar": "^3.12",
+        "fakerphp/faker": "^1.23",
+        "larastan/larastan": "^2.9",
+        "laravel/breeze": "^2.0",
+        "laravel/pint": "^1.13",
+        "laravel/sail": "^1.26",
+        "mockery/mockery": "^1.6",
+        "nunomaduro/collision": "^8.0",
         "orangehill/iseed": "^3.0",
-        "phpunit/phpunit": "^10.0",
-        "romanzipp/laravel-model-doc": "^3.1",
-        "spatie/laravel-ignition": "^2.0"
+        "phpunit/phpunit": "^10.5",
+        "romanzipp/laravel-model-doc": "^3.0",
+        "spatie/laravel-ignition": "^2.4"
     },
     "autoload": {
         "psr-4": {
@@ -108,7 +112,10 @@
         "preferred-install": "dist",
         "sort-packages": true,
         "allow-plugins": {
+            "pestphp/pest-plugin": true,
             "php-http/discovery": true
         }
-    }
+    },
+    "minimum-stability": "stable",
+    "prefer-stable": true
 }
