--- a/src/.env.example
+++ b/src/.env.example
@@ -2,18 +2,29 @@ APP_NAME=Barocco
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
+APP_TIMEZONE=Europe/Minsk
 APP_URL=http://localhost
 
+APP_LOCALE=ru
+APP_FALLBACK_LOCALE=en
+APP_FAKER_LOCALE=en_US
+
+APP_MAINTENANCE_DRIVER=file
+APP_MAINTENANCE_STORE=database
+
+BCRYPT_ROUNDS=12
+
 LOG_CHANNEL=stack
+LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=mysql
-DB_PORT=3306
-DB_DATABASE=app
-DB_USERNAME=login
-DB_PASSWORD=pass
+DB_CONNECTION=sqlite
+# DB_HOST=127.0.0.1
+# DB_PORT=3306
+# DB_DATABASE=laravel
+# DB_USERNAME=root
+# DB_PASSWORD=
 
 MS_DRIVER=array
 MS_DB_CONNECTION=sqlsrv
@@ -27,22 +38,29 @@ SSH_1C_HOSTNAME=host
 SSH_1C_USER=user
 SSH_1C_PORT=port
 
-BROADCAST_DRIVER=log
-CACHE_DRIVER=file
+SESSION_DRIVER=database
+SESSION_LIFETIME=120
+SESSION_ENCRYPT=false
+SESSION_PATH=/
+SESSION_DOMAIN=null
+
+BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=database
-SESSION_DRIVER=file
-SESSION_LIFETIME=120
+
+CACHE_STORE=database
+CACHE_PREFIX=
 
 MEMCACHED_HOST=127.0.0.1
 
+REDIS_CLIENT=phpredis
 REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
+MAIL_MAILER=log
+MAIL_HOST=127.0.0.1
+MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
