391. move phpstan config to inside sail

--- a/.github/workflows/phpstan.yml
+++ b/.github/workflows/phpstan.yml
@@ -5,6 +5,9 @@ on: [ push, pull_request_target ]
 jobs:
   phpstan:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./src
 
     steps:
       - name: Checkout code
@@ -20,16 +23,15 @@ jobs:
           coverage: none
 
       - name: Copy .env
-        run: php -r "file_exists('src/.env') || copy('src/.env.example', 'src/.env');"
+        run: php -r "file_exists('.env') || copy('.env.example', '.env');"
 
       - name: Download and extract sxGeo database
         run: |
           wget https://sypexgeo.net/files/SxGeoCountry.zip
-          unzip SxGeoCountry.zip -d src/database/sxgeo
+          unzip SxGeoCountry.zip -d database/sxgeo
 
       - name: Install dependencies
-        working-directory: ./src
         run: composer install --no-interaction --no-scripts --no-progress --prefer-dist
 
       - name: Execute PHPStan
-        run: src/vendor/bin/phpstan analyse
+        run: vendor/bin/phpstan analyse
