--- a/src/composer.json
+++ b/src/composer.json
@@ -27,11 +27,11 @@
         "appstract/laravel-opcache": "^4.0",
         "calebporzio/sushi": "^2.5",
         "ddeboer/imap": "^1.19",
-        "default-089/sxgeo": "0.16.*@dev",
         "defstudio/telegraph": "^1.42",
         "deployer/deployer": "^7.3",
         "diglactic/laravel-breadcrumbs": "^9.0",
         "dmitrakovich/smstraffic-for-laravel": "^0.2.0",
+        "dmitrakovich/sxgeo": "^0.2.0",
         "drandin/declension-nouns": "dev-master",
         "encore/laravel-admin": "^1.9",
         "facebook/php-business-sdk": "^19.0",
