--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -91,7 +91,9 @@ jobs:
       with:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
-        message: Success deploying ✅
+        message: |
+          Commit: ${{ github.event.head_commit.message }}
+          Success deploying ✅
 
 
   ##################################
