--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -92,7 +92,7 @@ jobs:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
         message: |
-          Commit: ${{ github.event.head_commit.message }}
+          >> ${{ github.event.head_commit.message }}
           Success deploying ✅
 
 
