--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -93,6 +93,13 @@ jobs:
         token: ${{ secrets.TELEGRAM_TOKEN }}
         format: markdown
         message: |
+          **bold**
+          __italic__
+          ~~strikethrough~~
+          ||spoiler||
+          >> quote
+          `code`
+          >Commit: ${{ github.event.head_commit.message | truncate(50) }}
           **>${{ github.event.commits[0].message }}
           Success deploying ✅
 
