--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -91,6 +91,13 @@ jobs:
       with:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
+        format: markdown
+        disable_web_page_preview: true
+        message: |
+          > Commit: ${{ github.event.head_commit.message | truncate(50) }}
+          >> Commit: ${{ github.event.head_commit.message | truncate(5) }}
+          **> ${{ github.event.commits[0].message }}
+          Success deploying ✅
 
 
   ##################################
