--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -94,8 +94,8 @@ jobs:
         format: markdown
         disable_web_page_preview: true
         message: |
-          > Commit: ${{ github.event.head_commit.message | truncate(50) }}
-          >> Commit: ${{ github.event.head_commit.message | truncate(5) }}
+          > Commit: ${{ github.event.head_commit.message }}
+          >> Commit: ${{ github.event.head_commit.message }}
           **> ${{ github.event.commits[0].message }}
           Success deploying ✅
 
