--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -91,11 +91,11 @@ jobs:
       with:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
-        format: markdown
+        format: html
         disable_web_page_preview: true
         message: |
-          Success deploying ✅
-          Commit message: ${{ github.event.commits[0].message }}
+          <b>Success deploying ✅</b>
+          <blockquote expandable>${{ github.event.commits[0].message }}</blockquote>
 
 
   ##################################
