--- a/src/.env.example
+++ b/src/.env.example
@@ -85,7 +85,7 @@ YANDEX_TOKEN=
 SENTRY_LARAVEL_DSN=
 SENTRY_TRACES_SAMPLE_RATE=0.0
 
-CAPTHCA_SECRET=
+CAPTCHA_SECRET=
 
 GOOGLE_TAG_MANAGER_ID=
 GOOGLE_TAG_MANAGER_ENABLED=false
