79. update to laravel 12

--- a/src/composer.json
+++ b/src/composer.json
@@ -1,11 +1,11 @@
 {
+    "$schema": "https://getcomposer.org/schema.json",
     "name": "laravel/laravel",
-    "version": "1.0.0",
     "type": "project",
-    "description": "The Laravel Framework.",
+    "description": "Barocco online store.",
     "keywords": [
-        "framework",
-        "laravel"
+        "e-commerce",
+        "barocco"
     ],
     "license": "MIT",
     "repositories": [
@@ -25,56 +25,54 @@
     "require": {
         "php": "^8.3",
         "appstract/laravel-opcache": "^4.0",
-        "bezhansalleh/filament-shield": "^3.2",
+        "bezhansalleh/filament-shield": "^3.3",
         "calebporzio/sushi": "^2.5",
         "ddeboer/imap": "^1.19",
-        "defstudio/telegraph": "^1.42",
-        "deployer/deployer": "^7.3",
-        "diglactic/laravel-breadcrumbs": "^9.0",
-        "dmitrakovich/smstraffic-for-laravel": "^0.2.0",
+        "defstudio/telegraph": "^1.57",
+        "deployer/deployer": "^7.5",
+        "diglactic/laravel-breadcrumbs": "^10.0",
+        "dmitrakovich/smstraffic-for-laravel": "^0.3.0",
         "dmitrakovich/sxgeo": "^0.2.0",
         "drandin/declension-nouns": "dev-master",
         "encore/laravel-admin": "^1.9",
         "facebook/php-business-sdk": "^19.0",
-        "filament/filament": "^3.2",
+        "filament/filament": "^3.3",
+        "filipfonal/filament-log-manager": "^2.1",
         "giggsey/libphonenumber-for-php": "^8.13",
-        "guzzlehttp/guzzle": "^7.8",
+        "guzzlehttp/guzzle": "^7.9",
         "jenssegers/agent": "^2.6",
         "jxlwqq/env-manager": "^0.1.0",
         "kalnoy/nestedset": "v6.x-dev",
         "laravel-admin-ext/ckeditor": "^1.0",
         "laravel-admin-ext/grid-sortable": "^1.1",
         "laravel-admin-ext/log-viewer": "^1.0",
-        "laravel/framework": "^11.0",
+        "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
-        "laravel/tinker": "^2.9",
-        "laravie/serialize-queries": "^3.0",
-        "league/flysystem-aws-s3-v3": "^3.26",
+        "laravel/tinker": "^2.10.1",
+        "laravie/serialize-queries": "^3.2",
+        "league/flysystem-aws-s3-v3": "^3.29",
         "maatwebsite/excel": "^3.1",
-        "php-ffmpeg/php-ffmpeg": "^1.2",
+        "php-ffmpeg/php-ffmpeg": "^1.3",
         "picqer/php-barcode-generator": "^2.4",
-        "sentry/sentry-laravel": "^4.4",
-        "spatie/laravel-backup": "^8.6",
+        "sentry/sentry-laravel": "^4.13",
+        "spatie/laravel-backup": "^9.2",
         "spatie/laravel-data": "^4.13",
         "spatie/laravel-googletagmanager": "^2.7",
-        "spatie/laravel-medialibrary": "^11.4",
-        "staudenmeir/eloquent-json-relations": "^1.12",
-        "staudenmeir/laravel-cte": "^1.11",
+        "spatie/laravel-medialibrary": "^11.12",
+        "staudenmeir/eloquent-json-relations": "^1.14",
+        "staudenmeir/laravel-cte": "^1.12",
         "yoomoney/yookassa-sdk-php": "^2.2"
     },
     "require-dev": {
-        "barryvdh/laravel-debugbar": "^3.12",
+        "barryvdh/laravel-debugbar": "^3.15",
         "fakerphp/faker": "^1.23",
-        "larastan/larastan": "^2.9",
-        "laravel/breeze": "^2.0",
-        "laravel/pint": "^1.18",
-        "laravel/sail": "^1.26",
+        "laravel/pail": "^1.2.2",
+        "laravel/pint": "^1.13",
+        "laravel/sail": "^1.41",
         "mockery/mockery": "^1.6",
-        "nunomaduro/collision": "^8.0",
-        "orangehill/iseed": "^3.0",
-        "phpunit/phpunit": "^10.5",
-        "romanzipp/laravel-model-doc": "^3.0",
-        "spatie/laravel-ignition": "^2.4"
+        "nunomaduro/collision": "^8.6",
+        "orangehill/iseed": "^3.1",
+        "phpunit/phpunit": "^11.5.3"
     },
     "autoload": {
         "psr-4": {
@@ -109,6 +107,10 @@
         ],
         "phpstan": [
             "./vendor/bin/phpstan analyse"
+        ],
+        "dev": [
+            "Composer\\Config::disableProcessTimeout",
+            "npx concurrently -c \"#93c5fd,#c4b5fd,#fb7185,#fdba74\" \"php artisan serve\" \"php artisan queue:listen --tries=1\" \"php artisan pail --timeout=0\" \"npm run dev\" --names=server,queue,logs,vite"
         ]
     },
     "extra": {
