--- a/src/.env.example
+++ b/src/.env.example
@@ -65,7 +65,7 @@ MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_FROM_ADDRESS=info@barocco.by
 MAIL_FROM_NAME="${APP_NAME}"
 BACKUP_INFO_MAIL_TO=
 
