78. fix some phpstan errors 6 lvl

--- a/src/composer.json
+++ b/src/composer.json
@@ -1,6 +1,7 @@
 {
     "$schema": "https://getcomposer.org/schema.json",
-    "name": "laravel/laravel",
+    "name": "dmitrakovich/shop.test",
+    "version": "1.0.0",
     "type": "project",
     "description": "Barocco online store.",
     "keywords": [
