--- a/src/composer.json
+++ b/src/composer.json
@@ -69,7 +69,8 @@
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.6",
         "orangehill/iseed": "^3.1",
-        "phpunit/phpunit": "^11.5.3"
+        "phpunit/phpunit": "^11.5.3",
+        "romanzipp/laravel-model-doc": "^3.0"
     },
     "autoload": {
         "psr-4": {
