--- a/src/composer.json
+++ b/src/composer.json
@@ -48,6 +48,7 @@
         "laravie/serialize-queries": "^3.2",
         "league/flysystem-aws-s3-v3": "^3.29",
         "maatwebsite/excel": "^3.1",
+        "mokhosh/filament-rating": "^1.4",
         "php-ffmpeg/php-ffmpeg": "^1.3",
         "picqer/php-barcode-generator": "^2.4",
         "sentry/sentry-laravel": "^4.13",
