--- a/src/composer.json
+++ b/src/composer.json
@@ -34,6 +34,7 @@
         "encore/laravel-admin": "^1.9",
         "facebook/php-business-sdk": "^19.0",
         "filament/filament": "^3.3",
+        "filament/spatie-laravel-media-library-plugin": "^3.2",
         "filipfonal/filament-log-manager": "^2.1",
         "giggsey/libphonenumber-for-php": "^8.13",
         "guzzlehttp/guzzle": "^7.9",
@@ -42,7 +43,7 @@
         "kalnoy/nestedset": "v6.x-dev",
         "laravel-admin-ext/ckeditor": "^1.0",
         "laravel-admin-ext/grid-sortable": "^1.1",
-        "laravel/framework": "^12.0",
+        "laravel/framework": "^12.7",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
         "laravie/serialize-queries": "^3.2",
