--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -30,8 +30,12 @@ jobs:
       uses: shivammathur/setup-php@v2
       with:
         php-version: '8.3'
-    - uses: actions/checkout@v3
-    - uses: symfonycorp/security-checker-action@v3
+    - uses: actions/cache@v2
+      id: cache-db
+      with:
+          path: ~/.symfony/cache
+          key: db
+    - uses: symfonycorp/security-checker-action@v5
       with:
         lock: src/composer.lock
     - name: Copy .env
