--- a/src/composer.json
+++ b/src/composer.json
@@ -108,6 +108,7 @@
         "phpstan": [
             "./vendor/bin/phpstan analyse"
         ],
+        "lint": "./vendor/bin/pint --config ../.formatters/pint.json",
         "dev": [
             "Composer\\Config::disableProcessTimeout",
             "npx concurrently -c \"#93c5fd,#c4b5fd,#fb7185,#fdba74\" \"php artisan serve\" \"php artisan queue:listen --tries=1\" \"php artisan pail --timeout=0\" \"npm run dev\" --names=server,queue,logs,vite"
