--- a/.github/workflows/coding-standards.yml
+++ b/.github/workflows/coding-standards.yml
@@ -2,6 +2,8 @@ name: Fix code styling
 
 on:
   push:
+    branches:
+      - master
   pull_request_target:
   workflow_dispatch:
     inputs:
@@ -11,7 +13,7 @@ on:
         type: string
       message:
         description: 'Commit message'
-        default: Fix code styling.
+        default: Check code styling.
         type: string
 
 jobs:
