--- a/.github/workflows/phpstan.yml
+++ b/.github/workflows/phpstan.yml
@@ -1,6 +1,10 @@
 name: PHPStan
 
-on: [ push, pull_request_target ]
+on:
+  push:
+    branches:
+      - master
+  pull_request_target:
 
 jobs:
   phpstan:
