--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -94,11 +94,13 @@ jobs:
     - name: Escape commit message
       id: escape
       run: |
-        RAW_MSG="${{ github.event.commits[0].message }}"
-        ESCAPED_MSG=$(echo "$RAW_MSG" | sed -e 's/&/\&amp;/g' -e 's/</\&lt;/g' -e 's/>/\&gt;/g' -e 's/"/\&quot;/g')
-        echo "escaped_message<<EOF" >> $GITHUB_OUTPUT
-        echo "$ESCAPED_MSG" >> $GITHUB_OUTPUT
-        echo "EOF" >> $GITHUB_OUTPUT
+        echo "escaped_message<<EOF" >> "$GITHUB_OUTPUT"
+        echo "${{ github.event.head_commit.message }}" \
+          | sed -e 's/&/\&amp;/g' \
+                -e 's/</\&lt;/g' \
+                -e 's/>/\&gt;/g' \
+                -e 's/"/\&quot;/g' >> "$GITHUB_OUTPUT"
+        echo "EOF" >> "$GITHUB_OUTPUT"
 
     - name: Send success status
       uses: appleboy/telegram-action@master
