--- a/src/.env.example
+++ b/src/.env.example
@@ -77,6 +77,9 @@ ACTIVE_STORAGE_ENDPOINT=
 TELEGRAM_BOT_TOKEN=
 TELEGRAM_BOT_CHAT_ID=
 
+TELEGRAM_DEV_BOT_TOKEN=
+TELEGRAM_DEV_BOT_CHAT_ID=
+
 ADMIN_ROUTE_PREFIX=admin
 ADMIN_HTTPS=false
 
